<resources>
    <string name="app_name">SOFE4640 Final</string>
    <string name="placeholder">Placeholder</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password (big secret)</string>
    <string name="prompt_submit">Submit</string>

    <string name="title_login">Log In</string>
    <string name="title_register">Register</string>

    <string name="prompt_switch_login">Switch to Login</string>
    <string name="prompt_switch_register">Switch to Register</string>
    <string name="description_venue_image">Venue Image</string>
    <string name="label_nearby">Nearby Venues</string>
    <string name="label_following">Following</string>
    <string name="label_upcoming">Upcoming in Following</string>
    <string name="label_distance">%.2f km</string>
    <string name="prompt_follow">Follow</string>
    <string name="prompt_unfollow">Unfollow</string>
    <string name="user_location">User location</string>
    <string name="count_followers">%2d Followers</string>
    <string name="description_event_image">eventImageDescPlaceholder</string>
    <string name="logout">Logout</string>
    <string name="buy_tickets">Buy tickets</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_comment">Leave a comment:</string>
    <string name="prompt__post">Post</string>
</resources>